--- a/index.html
+++ b/index.html
@@ -94,7 +94,68 @@
                 <img src="./images/intro/tochki.svg" alt="" class="intro__about-us-toshki">
             </section>
 
-            <section class="lab">
+            <section class="industrial">
+                <h2 class="industrial__title">INDUSTRIAL AI RESEARCH LAB</h2>
+                <div class="industrial__main-cont">
+                    <img class="industrial__img" src="./images/industrial/man.jpg" alt="Мужчины за комьютором">
+                    <img class="industrial__img industrial__img2" src="./images/industrial/indMan.jpg"
+                        alt="Мужчины за комьютором">
+                    <div class="industrial__text-cont">
+                        <p class="industrial__text">Центр национальной технологической инициативы (НТИ), получивший
+                            государственную
+                            поддержку по направлению
+                            Технологии
+                            машинного обучения
+                            и когнитивные технологии.</p>
+                        <p class="industrial__text">Мы изучаем проблемы и выявляем, когда мы работаем вместе
+                            с нашими клиентами,
+                            новые решения находят, не
+                            задумываясь.
+                            Работая таким образом и проявляя гибкость, мы можем поддерживать новый подход для
+                            удовлетворения
+                            потребностей наших
+                            клиентов.</p>
+                    </div>
+                    <img src="./images/industrial/molecula.svg" alt="Молекула">
+                </div>
+                <div class="industrial__cards">
+                    <div class="industrial__card industrial__card-1">
+                        <p class="industrial__card-title">Анализ социальных данных</p>
+                        <div class="industrial__card-img-cont"><img class="industrial__card-img"
+                                src="./images/industrial/card1.svg" alt="Код">
+                        </div>
+                        <p class="industrial__card-text">Направление включает в&nbsp;себя исследования
+                            и&nbsp;разработки технологий&nbsp;МО и&nbsp;КТ</p>
+                        <button class="industrial__card-button">Подробнее</button>
+                    </div>
+                    <div class="industrial__card industrial__card-2">
+                        <p class="industrial__card-title">Инфраструктура больших данных</p>
+                        <div class="industrial__card-img-cont"><img class="industrial__card-img"
+                                src="./images/industrial/card2.svg" alt="Код">
+                        </div>
+                        <p class="industrial__card-text">Направление включает в&nbsp;себя исследования
+                            и&nbsp;разработки технологий&nbsp;МО и&nbsp;КТ</p>
+                        <button class="industrial__card-button">Подробнее</button>
+                    </div>
+                    <div class="industrial__card industrial__card-3">
+                        <p class="industrial__card-title">Облачные вычисления</p>
+                        <div class="industrial__card-img-cont"><img class="industrial__card-img"
+                                src="./images/industrial/card3.svg" alt="Код">
+                        </div>
+                        <p class="industrial__card-text">Направление включает в&nbsp;себя исследования
+                            и&nbsp;разработки технологий&nbsp;МО и&nbsp;КТ</p>
+                        <button class="industrial__card-button">Подробнее</button>
+                    </div>
+                    <div class="industrial__card industrial__card-4">
+                        <p class="industrial__card-title">QA истемы</p>
+                        <div class="industrial__card-img-cont"><img class="industrial__card-img"
+                                src="./images/industrial/card4.svg" alt="Код">
+                        </div>
+                        <p class="industrial__card-text">Направление включает в&nbsp;себя исследования
+                            и&nbsp;разработки технологий&nbsp;МО и&nbsp;КТ</p>
+                        <button class="industrial__card-button">Подробнее</button>
+                    </div>
+                </div>
             </section>
 
             <section class="projects">
