--- a/index.html
+++ b/index.html
@@ -175,7 +175,28 @@
               (ННГУ, ДВФУ, ФГБОУ ВО «МГТУ «СТАНКИН», НовГУ), а также профильную компанию ООО «НЦЭО» в области
               электронного
               и дистанционного образования. Реализуются образовательные программы различных форматов.</p>
-            <div class="programs educate__programs">
+            <div class="programs educate__programs" id="aspirant">
+              <img class="programs__picture" src="./images/picture/aspirant.png"
+                alt="Фотография студентов окончивших магистратуру">
+              <div class="programs__text">
+                <h3 class="title programs__title">Образовательные программы аспирантуры в области МО и КТ
+                </h3>
+                <ul class="list programs__list">
+                  <li class="programs__item">Прикладные технологии искусственного интеллекта;</li>
+                  <li class="programs__item">Машинное обучение и искусственный интеллект;</li>
+                  <li class="programs__item">Биометрические информационные системы;</li>
+                  <li class="programs__item">Речевые информационные системы;</li>
+                  <li class="programs__item">Когнитивные вычисления и квантовый интеллект;</li>
+                  <li class="programs__item">Большие данные и экстренные вычисления;</li>
+                  <li class="programs__item">Семантические системы и инженерия знаний;</li>
+                  <li class="programs__item">Технологии разработки компьютерных игр</li>
+                </ul>
+                <a class="link programs__link" href="#">
+                  <p class="programs__link-text">Подробнее</p>
+                </a>
+              </div>
+            </div>
+            <div class="programs educate__programs educate__programs_active" id="magistr">
               <img class="programs__picture" src="./images/picture/magistr.png"
                 alt="Фотография студентов окончивших магистратуру">
               <div class="programs__text">
@@ -198,8 +219,8 @@
             </div>
 
             <div class="educate__buttons">
-              <button class="button educate__button">Аспирантура</button>
-              <button class="button educate__button educate__button_active">Магистратура</button>
+              <button class="button educate__button" id="aspirant__button">Аспирантура</button>
+              <button class="button educate__button educate__button_active" id="magistr__button">Магистратура</button>
             </div>
           </div>
         </section>
