--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
 
 <body class="body">
     <div class="page">
+        
         <header class="header">
-            <img class="header__menu" src="./images/header/Burger.svg" alt="Меню">
-            <img class="header__icon" src="./images/header/logo.svg" alt="Логотип">
+            <img class="header__burger-icon" src="./images/header/Burger.svg" alt="Меню" onclick="alert('sup')">
+            <img class="header__logo" src="./images/header/logo.svg" alt="Логотип">
             <nav class="header__nav">
                 <a class="header__nav-item header__nav-item_active" href="#">О нас</a>
                 <a class="header__nav-item" href="#">Лаборатория</a>
@@ -25,31 +26,35 @@
                 <a class="header__nav-item" href="#">Связаться</a>
             </nav>
         </header>
-
-
+        
         <main class="main">
             <section class="intro">
-                <h1 class="intro__title">Когнитивные технологии, <span class="intro__title-min">машинное
-                        обучение</span>
-                </h1>
-                <h2 class="intro__subtitle">Системы прикладного искусственного интеллекта</h2>
-                <button class="intro__button">НАШИ ПРОЕКТЫ</button>
-                <h2 class="intro__about-us-title">НЕСКОЛЬКО СЛОВ О НАС</h2>
-                <p class="intro__about-us-text">Национальный центр когнитивных разработок&nbsp;&mdash; центр
-                    национальной технологической инициативы (НТИ), получивший
-                    государственную поддержку по&nbsp;направлению &laquo;Технологии машинного обучения
-                    и&nbsp;когнитивные технологии&raquo;.</p>
-                <div class="intro__body swiper">
-                    <div class="intro__about-us-cards swiper-wrapper">
-                        <div class="intro__about-us-card swiper-slide">
-                            <img class="intro__about-us-knopka" src="./images/intro/knopka.svg" alt="Кнопка">
-                            <p class="intro__about-us-card-data">Понедельник, 5 июля 2021г</p>
-                            <p class="intro__about-us-card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
+                <div class="intro__wrapper">
+                    <h1 class="intro__title">
+                        Когнитивные технологии, 
+                        <span class="intro__title-min">машинное обучение</span>
+                    </h1>
+                    <div>
+                        <h2 class="intro__subtitle">Системы прикладного искусственного интеллекта</h2>
+                        <button class="intro__button">Наши проекты</button>
+                    </div>
+                </div>
+            </section>
+
+            <section class="about-us">
+                <h2 class="about-us__title">Несколько слов о нас </h2>
+                <p class="about-us__subtitle">Национальный центр когнитивных разработок – центр национальной технологической инициативы (НТИ), получивший государственную поддержку по направлению «Технологии машинного обучения и когнитивные технологии».</p>
+                <div class="about-us__swiper swiper swiper-initialized swiper-pointer-events">
+                    <div class="about-us__cards swiper-wrapper">
+                        <div class="about-us__card swiper-slide">
+                            <img class="about-us__pin" src="./images/intro/knopka.svg" alt="Кнопка">
+                            <p class="about-us__card-data">Понедельник, 5 июля 2021г</p>
+                            <p class="about-us__card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
                                 ЛУЧШИМИ
                                 НОВИ…
                             </p>
-                            <div class="intro__about-us-card-polpska"></div>
-                            <p class="intro__about-us-card-text">Команда ИТМО стала лучшей на&nbsp;международном финале
+                            <hr class="about-us__card-line">
+                            <p class="about-us__card-text">Команда ИТМО стала лучшей на&nbsp;международном финале
                                 RoboCup-2021.
                                 Успех
                                 ребятам принес Роберт Роботецкий&nbsp;&mdash; робот-виртуоз,
@@ -58,15 +63,15 @@
                                 команды участвовали
                                 сотрудники лаборатории.</p>
                         </div>                        
-                        <div class="intro__about-us-card swiper-slide">
-                            <img class="intro__about-us-knopka" src="./images/intro/knopka.svg" alt="Кнопка">
-                            <p class="intro__about-us-card-data">Понедельник, 5 июля 2021г</p>
-                            <p class="intro__about-us-card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
+                        <div class="about-us__card swiper-slide">
+                            <img class="about-us__pin" src="./images/intro/knopka.svg" alt="Кнопка">
+                            <p class="about-us__card-data">Понедельник, 5 июля 2021г</p>
+                            <p class="about-us__card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
                                 ЛУЧШИМИ
                                 НОВИ…
                             </p>
-                            <div class="intro__about-us-card-polpska"></div>
-                            <p class="intro__about-us-card-text">Команда ИТМО стала лучшей на&nbsp;международном финале
+                            <hr class="about-us__card-line">
+                            <p class="about-us__card-text">Команда ИТМО стала лучшей на&nbsp;международном финале
                                 RoboCup-2021.
                                 Успех
                                 ребятам принес Роберт Роботецкий&nbsp;&mdash; робот-виртуоз,
@@ -75,15 +80,52 @@
                                 команды участвовали
                                 сотрудники лаборатории.</p>
                         </div>
-                        <div class="intro__about-us-card swiper-slide">
-                            <img class="intro__about-us-knopka" src="./images/intro/knopka.svg" alt="Кнопка">
-                            <p class="intro__about-us-card-data">Понедельник, 5 июля 2021г</p>
-                            <p class="intro__about-us-card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
+                        <div class="about-us__card swiper-slide">
+                            <img class="about-us__pin" src="./images/intro/knopka.svg" alt="Кнопка">
+                            <p class="about-us__card-data">Понедельник, 5 июля 2021г</p>
+                            <p class="about-us__card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
                                 ЛУЧШИМИ
                                 НОВИ…
                             </p>
-                            <div class="intro__about-us-card-polpska"></div>
-                            <p class="intro__about-us-card-text">Команда ИТМО стала лучшей на&nbsp;международном финале
+                            <hr class="about-us__card-line">
+                            <p class="about-us__card-text">
+                                Команда ИТМО стала лучшей на&nbsp;международном финале
+                                RoboCup-2021.
+                                Успех
+                                ребятам принес Роберт Роботецкий&nbsp;&mdash; робот-виртуоз,
+                                исполнивший знаменитый французский романс &laquo;Под небом Парижа&raquo;.
+                                В&nbsp;подготовке
+                                команды участвовали
+                                сотрудники лаборатории.</p>
+                        </div>
+                        <div class="about-us__card swiper-slide">
+                            <img class="about-us__pin" src="./images/intro/knopka.svg" alt="Кнопка">
+                            <p class="about-us__card-data">Понедельник, 5 июля 2021г</p>
+                            <p class="about-us__card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
+                                ЛУЧШИМИ
+                                НОВИ…
+                            </p>
+                            <hr class="about-us__card-line">
+                            <p class="about-us__card-text">
+                                Команда ИТМО стала лучшей на&nbsp;международном финале
+                                RoboCup-2021.
+                                Успех
+                                ребятам принес Роберт Роботецкий&nbsp;&mdash; робот-виртуоз,
+                                исполнивший знаменитый французский романс &laquo;Под небом Парижа&raquo;.
+                                В&nbsp;подготовке
+                                команды участвовали
+                                сотрудники лаборатории.</p>
+                        </div>
+                        <div class="about-us__card swiper-slide">
+                            <img class="about-us__pin" src="./images/intro/knopka.svg" alt="Кнопка">
+                            <p class="about-us__card-data">Понедельник, 5 июля 2021г</p>
+                            <p class="about-us__card-title">АВТОРЫ РОБОТА-МУЗЫКАНТА РОБЕРТА РОБОТЕЦКОГО ПРИЗНАНЫ
+                                ЛУЧШИМИ
+                                НОВИ…
+                            </p>
+                            <hr class="about-us__card-line">
+                            <p class="about-us__card-text">
+                                Команда ИТМО стала лучшей на&nbsp;международном финале
                                 RoboCup-2021.
                                 Успех
                                 ребятам принес Роберт Роботецкий&nbsp;&mdash; робот-виртуоз,
@@ -93,35 +135,27 @@
                                 сотрудники лаборатории.</p>
                         </div>
                     </div>
-                    <div class="intro__about-us-toshki"></div>
                 </div>
-                <div class="intro__arrow intro__arrow_back swiper-button-prev"></div>
-                <div class="intro__arrow intro__arrow_next swiper-button-next"></div>
+                <div class="swiper-pagination about-us__bullets"></div>
+                <button class="about-us__arrow about-us__arrow_type_back swiper-button-prev"></button>
+                <button class="about-us__arrow about-us__arrow_type_next swiper-button-next"></button>
             </section>
 
             <section class="industrial">
                 <h2 class="industrial__title">INDUSTRIAL AI RESEARCH LAB</h2>
-                <div class="industrial__main-cont">
+                <div class="industrial__main">
                     <img class="industrial__img" src="./images/industrial/man.jpg" alt="Мужчины за комьютором">
-                    <img class="industrial__img industrial__img2" src="./images/industrial/indMan.jpg"
-                        alt="Мужчины за комьютором">
-                    <div class="industrial__text-cont">
-                        <p class="industrial__text">Центр национальной технологической инициативы (НТИ), получивший
-                            государственную
-                            поддержку по направлению
-                            Технологии
-                            машинного обучения
-                            и когнитивные технологии.</p>
-                        <p class="industrial__text">Мы изучаем проблемы и выявляем, когда мы работаем вместе
-                            с нашими клиентами,
-                            новые решения находят, не
-                            задумываясь.
-                            Работая таким образом и проявляя гибкость, мы можем поддерживать новый подход для
-                            удовлетворения
-                            потребностей наших
-                            клиентов.</p>
+                    <img class="industrial__img" src="./images/industrial/indMan.jpg" alt="Мужчины за комьютором">
+                    <div class="industrial__text-wrapper">
+                        <p class="industrial__text">
+                            Центр национальной технологической инициативы (НТИ), получивший государственную поддержку по направлению «Технологии машинного обучения и когнитивные технологии». 
+                        </p>
+                        <p class="industrial__text">
+                            Мы изучаем проблемы и выявляем, когда мы работаем вместе с нашими клиентами, новые решения находят, не задумываясь. Работая таким образом 
+                            и проявляя гибкость, мы можем поддерживать новый подход для удовлетворения потребностей наших клиентов.
+                        </p>
                     </div>
-                    <img src="./images/industrial/molecula.svg" alt="Молекула">
+                    <img class="industrial__side-icon" src="./images/industrial/molecula.svg" alt="Молекула">
                 </div>
                 <div class="industrial__cards">
                     <div class="industrial__card industrial__card-1">
