--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                     <p class="publication__authors"></p>
                                     <p class="publication__text"></p>
                                 </div>
-                                <div class="publication__links publication__links_visible">
+                                <div class="publication__links ">
                                     <a class="link publication__link" href="#">
                                         <p class="publication__more-text">Читать полностью</p>
                                     </a>
@@ -288,7 +288,7 @@
                                     </button>
                                 </div>
 
-                                <ul class="list publication__social-sites social-sites social-sites_visible">
+                                <ul class="list publication__social-sites social-sites">
                                     <li class="social-sites__item">
                                         <a class="social-sites__link" href="#">
                                             <img class="social-sites__picture" src="./images/svg/vk.svg"
