feat: projects [deskop]

--- a/index.html
+++ b/index.html
@@ -201,8 +201,48 @@
                     </div>
                 </div>
             </section>
+
             <section class="projects" id="projects">
+                <h2 class="projects__title">НАШИ ПРОЕКТЫ</h2>
+                <ul class="projects__nav">
+                    <li class="projects__nav-list-item">Все проекты</li>
+                    <li class="projects__nav-list-item">Гос. проеткы</li>
+                    <li class="projects__nav-list-item">Спецпрограммы</li>
+                    <li class="projects__nav-list-item">В разработке</li>
+                </ul>
+                <div class="projects__thumb-wrapper">
+                    <div class="projects__thumb">
+                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                        <p class="projects__thumb-text"> 
+                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
+                        </p>
+                        <a href="" class="projects__thumb-link">Подробнее</a>
+                    </div>
+                    <div class="projects__thumb">
+                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                        <p class="projects__thumb-text">
+                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
+                        </p>
+                        <a href="" class="projects__thumb-link">Подробнее</a>
+                    </div>
+                    <div class="projects__thumb">
+                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                        <p class="projects__thumb-text">
+                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
+                        </p>
+                        <a href="" class="projects__thumb-link">Подробнее</a>
+                    </div>
+                    <div class="projects__thumb">
+                        <img src="/images/projects/gazprom.png" alt="" class="projects__thumb-logo">
+                        <p class="projects__thumb-text">
+                            Направление включает в себя исследования и разработки технологий МО и КТ. Модули для внедрения в предметные сетевые программы магистратуры с элементами МО и КТ, или программы ДПО.
+                        </p>
+                        <a href="" class="projects__thumb-link">Подробнее</a>
+                    </div>
+                </div>
+                <div class="projects__interface">1/30</div>
             </section>
+
             <section class="educate" id="educate">
                 <div class="educate__body">
                     <h2 class="title educate__title">Образование</h2>
