fix: Fix popup-burger

--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                     <li class="navigation__item-more">
                         <p class="navigation__item navigation__item-expander">Образование</p>
                         <ul class="navigation__mini-list mini-list">
-                            <a class="navigation__link mini-list__link" href="#educate">
+                            <a class="navigation__link" href="#educate">
                                 <li class="mini-list__item" id="link-magistr">Магистратура</li>
                             </a>
                             <a class="navigation__link" href="#educate">
